事前にコンパイルするクラスにSentenceを追加&gcのオプションを変更