@@ -6,6 +6,10 @@
   :dependencies [[org.clojure/clojure "1.5.1"]
                  [info.yasuhisay/clj-utils "0.1.1"]
                  [org.clojure/tools.cli "0.2.1"]]
-  :aot [mst-clj.word]
-  :jvm-opts ["-Xmx30G" "-server" "-Dfile.encoding=UTF-8"]
+  :aot [mst-clj.word mst-clj.sentence]
+  :jvm-opts ["-Xms30G" "-Xmx30G" "-server"
+             "-Dfile.encoding=UTF-8"
+             "-XX:+UseConcMarkSweepGC"
+             "-XX:+CMSParallelRemarkEnabled"
+             "-XX:+UseParNewGC"]
   :main mst-clj.core)
